--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
   <div class="chart" id="apple-stock-chart"></div>
 
+  <div id="apple-stock-chart-2" class="chart"></div>
+
+
   <script src="//d3js.org/d3.v3.min.js"></script>
   <script src="scripts/chart.js" type="text/javascript"></script>
 </body>
